[package]
name = "net-timing-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
clap = "4.4.8"
dns-lookup = "2.0.4"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["stream"] }
socket2 = { version = "0.5.5", features = ["all"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
